--- a/firstWeek/QG训练营网络组第一周周记：2018年4月8日.md
+++ b/firstWeek/QG训练营网络组第一周周记：2018年4月8日.md
@@ -1,4 +1,4 @@
-------生活随记：------
+# 生活随记
 
 这周是在qg训练营的第一周。在这周的学习里，我学到了许多新知识，遇到了许多新困难，也学会解决了一个又一个困难。
 
@@ -14,19 +14,17 @@
 
 今天，我依然是修改师兄重新要求我改进的作业，到下午改完了又“菜单版”的单链表，然而还是说要继续改进：加上输入字符串报错！这个我就打算明天再弄吧！然后今晚按照计划继续学习git相关知识！
 
-------一周总结------
+# 一周总结
 
 通过这一周的学习，虽然感觉还是有压力的，但是在这之中我也学到了很多，对面向对象的理解加深，特别是C语言的能力，感觉还是有明显的提升吧！纠正了一些打码的不好习惯，比如要对定义的变量及时赋值等。
 
-------存在问题------
-
+# 存在问题
 最大的问题时间分配不好，感觉做事情没有计划性。就是哪个任务比较紧急就做什么。这样导致做事情很乱，效率很低！
 
-------下周规划------
-
+# 下周规划
 个人能力上：每天做号学习计划！这样可以在什么时间做什么，该学习学习该锻炼锻炼！希望能提高学习效率。
 
 课程上：①及时完成训练营、小组的任务，努力做到不拖延！②java的学习：集合、异常等③熟悉git操作④（进阶任务）学习HTML掌握基本标签的使用（有时间情况下）
 加油！
 
-                                             2018.4.9
+#                                            2018.4.9
